# napari-read-nd2

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_read_nd2/: _reader.py  napari.yaml
src/napari_read_nd2/_tests/: test_reader.py
