[metadata]
name = napari-read-nd2
version = attr: napari_read_nd2.__version__
description = A minimalist nd2 file reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karchern/napari-read-nd2
author = Nicolai Karcher
author_email = karchernic@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/karchern/napari-read-nd2/issues
    Documentation = https://github.com/karchern/napari-read-nd2#README.md
    Source Code = https://github.com/karchern/napari-read-nd2
    User Support = https://github.com/karchern/napari-read-nd2/issues

[options]
packages = find:
install_requires =
    numpy
    nd2
    lxml

python_requires = >=3.7.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-read-nd2 = napari_read_nd2:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
